--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="setStyles.css">
     <link rel="stylesheet" href="index.css">
-    <title>Document</title>
+    <title>Dice Practice</title>
 </head>
 <body>
-    <header><h1>Flex Dice Practice</h1></header>
+    <header><h1>Positioning Dice Practice</h1></header>
     <div>
         <h4>One</h4>
         <section>
@@ -25,7 +25,7 @@
     </div>
     <div>
         <h4>Three</h4>
-        <section>
+        <section >
             <span></span>
             <span></span>
             <span></span>              
@@ -34,10 +34,10 @@
     <div>
         <h4>Four</h4>
         <section>
-            <span></span>
-            <span></span>              
-            <span></span>                
-            <span></span>               
+                <span></span>
+                <span></span>              
+                <span></span>                
+                <span></span>               
         </section>
     </div>
     <div>
