--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </div>
     <div>
         <h4>Four</h4>
-        <section>
+        <section class='four'>
                 <span></span>
                 <span></span>              
                 <span></span>                
