updated first three dice displays

--- a/index.html
+++ b/index.html
@@ -12,20 +12,20 @@
     <header><h1>Positioning Dice Practice</h1></header>
     <div>
         <h4>One</h4>
-        <section>
+        <section class = "one">
             <span></span>
         </section>
     </div>
     <div>
         <h4>Two</h4>
-        <section>
+        <section class = "two">
             <span></span>
             <span></span>                             
         </section>
     </div>
     <div>
         <h4>Three</h4>
-        <section >
+        <section class = "three" >
             <span></span>
             <span></span>
             <span></span>              
@@ -34,10 +34,15 @@
     <div>
         <h4>Four</h4>
         <section class='four'>
+            <div class = "top">
                 <span></span>
-                <span></span>              
-                <span></span>                
-                <span></span>               
+                <span></span> 
+            </div>
+            <div class = "bottom">
+                    <span></span>                
+                    <span></span>   
+            </div>
+                                          
         </section>
     </div>
     <div>
